--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
     "@mui/material": "^6.1.1",
+    "@react-oauth/google": "^0.12.2",
     "axios": "^1.7.3",
     "boxicons": "^2.1.4",
     "daisyui": "^4.12.10",
@@ -25,6 +26,7 @@
     "framer-motion": "^11.3.24",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.3",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-country-region-selector": "^3.6.1",
     "react-datepicker": "^7.3.0",
