--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "node-schedule": "^2.1.1",
     "nodemon": "^3.1.0",
     "pdfkit": "^0.15.0",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "xss-clean": "^0.1.4"
   }
 }
